fix whitespace

--- a/tw/style.css
+++ b/tw/style.css
@@ -44,7 +44,8 @@ h2 {
 }
 
 .script-panel-container {
-    padding: 5px; width: 100%;
+    padding: 5px;
+    width: 100%;
 }
 
 @media (min-width: 641px) {
